Upgraded to Spring Boot 2.6, Gradle 6.9.2